[package]
name = "rusty-lemmings"
version = "0.1.0"
authors = ["Chris Hulbert <chris.hulbert@gmail.com>"]
edition = "2021"

[dependencies]
# bevy = "0.8" # For release.
bevy = { version = "0.8.0", features = ["dynamic"] } # For development, see: https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
